# planit

./: Dockerfile  docker-compose-prod.yaml  docker-compose.yaml  pyproject.toml
app/: main.py  models.py
app/config/: settings.py
app/templates/: index.html
nginx/: nginx.conf
ngnix/: Dockerfile  nginx.conf
